"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-07-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-07:
	  hacprsim: on keeper-check-failure print both the causing
		node and the output node that failed.
		Added many test cases with broken keepers, missing
		feedback, incorrect combinational feedback.


2011-07-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-06:
	  hacprsim: fixed condition for checking floating node, 
		only skip if the candidate fanout node has no fanin.
		Test cases updated, added.


	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-05:
	  hacprsim: defaulting to keeper-check-fail ignore
		because too much regression test noise.
		Fixed evaluation of floating nodes, to consider
		fanout candidates (of the node that just switched).
		Test cases updated and added.


2011-07-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-04:
	  Texinfo fixes for recently added commands.
	  hacprsim: new command 'feedback' and 'feedback-get'
		to print nodes in the feedback set (current value)
		debugged node_fanout misuse of invalid rule
		Added one test case.


2011-07-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-03:
	  rebase master (-main-00-84-82)
	  hacprsim: added keeper-check-fail policy command
	  State-prsim.cc: implemented dump_node_feedback.


2011-07-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-82:
	  Added -get variants to many commands that list nodes.
	  Wrote re-usable functions to print optional values of nodes.  
	  Test cases added.


2011-07-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-02: