@@ -3,6 +3,10 @@ X : .e(init:0)  1x1of2 off
 Y : .e(init:1)  1x1of4 off
 Z : .a(init:0)  1x1of3 off
 Warning: channel acknowledge `X.e' has no fanin!
+Warning: [mode fatal, keeper-check-fail]
+  simulator did not start with -f fast-weak-keepers
+  weak-rules are currently disabled.
+  keeper-check-fail policy unmodified
 mode: 
 	weak rules: off
 	unstable events propagate Xs
@@ -16,7 +20,7 @@ mode:
 	on invariant-unknown: fatal
 	on assert-fail: fatal
 	on channel-expect-fail: fatal
-	on keeper-check-fail: fatal
+	on keeper-check-fail: ignore
 we will manually toggle the enable 
 	0	X.e : 0
 	10	X.d[0] : 0
