@@ -1,3 +1,7 @@
+Warning: [mode fatal, keeper-check-fail]
+  simulator did not start with -f fast-weak-keepers
+  weak-rules are currently disabled.
+  keeper-check-fail policy unmodified
 checked exclhi rings:
 { z1.x1.x, z2.x1.x }
 checked excllo rings:
